Notebook -  Rework Checklist and Table database (#109)
* Notebook -  Rework Checklist and Table database - Checklist BE

* Notebook -  Rework Checklist and Table database - Checklist Migration

* Notebook -  Rework Checklist and Table database - Table API

* Notebook -  Rework Checklist and Table database - Create Table and Checklist Table

* Notebook -  Rework Checklist and Table database - Edit table

* Notebook -  Rework Checklist and Table database - Migrate table

* Notebook -  Rework Checklist and Table database - Event for migration trigger

* Notebook -  Rework Checklist and Table database - Migration Tasks UI

* Notebook -  Rework Checklist and Table database - Fix CloneService

* Notebook -  Rework Checklist and Table database - Fix FE tests

* Notebook -  Rework Checklist and Table database - Fix BE tests

* Notebook -  Rework Checklist and Table database - Fix Migration Trigger

* Notebook -  Rework Checklist and Table database - Delete unnecessary classes

* Notebook -  Rework Checklist and Table database - Extract ColumnDataServiceFetcher

* Notebook -  Rework Checklist and Table database - Integration tests for Migration Tasks module

* Notebook -  Rework Checklist and Table database - Unit tests

* Notebook -  Rework Checklist and Table database - Unit tests

* Notebook -  Rework Checklist and Table database - Unit tests

* Notebook -  Rework Checklist and Table database - Unit tests

* Notebook -  Rework Checklist and Table database - Unit tests

* Notebook -  Rework Checklist and Table database - Unit tests

* Notebook -  Rework Checklist and Table database - Cleanup finished

---------

Co-authored-by: bondabear@gmail.com <Saphy371321>