@@ -1,106 +1,84 @@
 package com.github.saphyra.apphub.service.notebook.service.table.creation;
 
-import com.github.saphyra.apphub.api.notebook.model.request.CreateTableRequest;
-import com.github.saphyra.apphub.lib.common_domain.BiWrapper;
-import com.github.saphyra.apphub.service.notebook.dao.content.Content;
-import com.github.saphyra.apphub.service.notebook.dao.content.ContentDao;
+import com.github.saphyra.apphub.api.notebook.model.ListItemType;
+import com.github.saphyra.apphub.api.notebook.model.table.CreateTableRequest;
+import com.github.saphyra.apphub.api.notebook.model.table.TableFileUploadResponse;
+import com.github.saphyra.apphub.api.notebook.model.table.TableHeadModel;
+import com.github.saphyra.apphub.api.notebook.model.table.TableRowModel;
 import com.github.saphyra.apphub.service.notebook.dao.list_item.ListItem;
 import com.github.saphyra.apphub.service.notebook.dao.list_item.ListItemDao;
-import com.github.saphyra.apphub.service.notebook.dao.list_item.ListItemType;
-import com.github.saphyra.apphub.service.notebook.dao.table.head.TableHead;
-import com.github.saphyra.apphub.service.notebook.dao.table.head.TableHeadDao;
-import com.github.saphyra.apphub.service.notebook.dao.table.join.TableJoin;
-import com.github.saphyra.apphub.service.notebook.dao.table.join.TableJoinDao;
 import com.github.saphyra.apphub.service.notebook.service.ListItemFactory;
-import com.github.saphyra.apphub.service.notebook.service.table.TableHeadFactory;
-import com.github.saphyra.apphub.service.notebook.service.table.TableJoinFactory;
+import com.github.saphyra.apphub.service.notebook.service.table.validator.TableCreationRequestValidator;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.verify;
+import static org.mockito.BDDMockito.then;
 
 @ExtendWith(MockitoExtension.class)
-public class TableCreationServiceTest {
+class TableCreationServiceTest {
+    private static final UUID USER_ID = UUID.randomUUID();
     private static final String TITLE = "title";
     private static final UUID PARENT = UUID.randomUUID();
-    private static final String COLUMN_NAME = "column-name";
-    private static final String COLUMN_VALUE = "column-value";
-    private static final UUID USER_ID = UUID.randomUUID();
     private static final UUID LIST_ITEM_ID = UUID.randomUUID();
-
-    @Mock
-    private ListItemFactory listItemFactory;
 
     @Mock
     private TableCreationRequestValidator tableCreationRequestValidator;
 
     @Mock
-    private TableHeadFactory tableHeadFactory;
-
-    @Mock
-    private TableJoinFactory tableJoinFactory;
-
-    @Mock
-    private ContentDao contentDao;
+    private ListItemFactory listItemFactory;
 
     @Mock
     private ListItemDao listItemDao;
 
     @Mock
-    private TableHeadDao tableHeadDao;
+    private TableRowCreationService tableRowCreationService;
 
     @Mock
-    private TableJoinDao tableJoinDao;
+    private TableHeadCreationService tableHeadCreationService;
 
     @InjectMocks
     private TableCreationService underTest;
 
     @Mock
+    private TableHeadModel tableHeadModel;
+
+    @Mock
+    private TableRowModel rowModel;
+
+    @Mock
     private ListItem listItem;
 
     @Mock
-    private TableHead tableHead;
-
-    @Mock
-    private TableJoin tableJoin;
-
-    @Mock
-    private Content content1;
-
-    @Mock
-    private Content content2;
+    private TableFileUploadResponse fileUploadResponse;
 
     @Test
-    public void create() {
-        given(listItemFactory.create(USER_ID, TITLE, PARENT, ListItemType.TABLE)).willReturn(listItem);
-        given(listItem.getListItemId()).willReturn(LIST_ITEM_ID);
-        given(tableHeadFactory.create(LIST_ITEM_ID, Arrays.asList(COLUMN_NAME), USER_ID)).willReturn(Arrays.asList(new BiWrapper<>(tableHead, content1)));
-        given(tableJoinFactory.create(LIST_ITEM_ID, Arrays.asList(Arrays.asList(COLUMN_VALUE)), USER_ID)).willReturn(Arrays.asList(new BiWrapper<>(tableJoin, content2)));
-
+    void create() {
         CreateTableRequest request = CreateTableRequest.builder()
             .title(TITLE)
             .parent(PARENT)
-            .columnNames(Arrays.asList(COLUMN_NAME))
-            .columns(Arrays.asList(Arrays.asList(COLUMN_VALUE)))
+            .listItemType(ListItemType.TABLE)
+            .tableHeads(List.of(tableHeadModel))
+            .rows(List.of(rowModel))
             .build();
 
-        UUID result = underTest.create(request, USER_ID, ListItemType.TABLE);
+        given(listItemFactory.create(USER_ID, TITLE, PARENT, ListItemType.TABLE)).willReturn(listItem);
+        given(listItem.getListItemId()).willReturn(LIST_ITEM_ID);
+        given(tableRowCreationService.saveRows(USER_ID, LIST_ITEM_ID, List.of(rowModel), ListItemType.TABLE)).willReturn(List.of(fileUploadResponse));
 
-        verify(tableCreationRequestValidator).validate(request);
-        verify(listItemDao).save(listItem);
-        verify(tableHeadDao).save(tableHead);
-        verify(tableJoinDao).save(tableJoin);
-        verify(contentDao).save(content1);
-        verify(contentDao).save(content2);
+        List<TableFileUploadResponse> result = underTest.create(USER_ID, request);
 
-        assertThat(result).isEqualTo(LIST_ITEM_ID);
+        assertThat(result).containsExactly(fileUploadResponse);
+
+        then(tableCreationRequestValidator).should().validate(request);
+        then(listItemDao).should().save(listItem);
+        then(tableHeadCreationService).should().saveTableHeads(USER_ID, request, listItem);
     }
 }
